methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:11: error: i  is already defined as variable i
var i=0
    ^PictureMono1:11: error: method i_= is defined twice
  conflicting symbols both originated in file 'plm.runtime2.PictureMono1'
var i=0
    ^PictureMono1:11: error: method i is defined twice
  conflicting symbols both originated in file 'plm.runtime2.PictureMono1'
var i=0
    ^