methods.picture.PictureMono1.scala.code
def MarqueSol(){
  baisseBrosse();leveBrosse()
  avance();droite();avance()
}
var i=0
def faireV(){
  for (i<-1 to 2){
    MarqueSol()
  } ;baisseBrosse();leveBrosse();gauche();avance();avance();gauche()
}
var i=0
for (i<-1 to 4){avance();avance();gauche()
  faireV()
}